# 3sem_DiscreteMath

lab1/src/: README.md  main.py
lab1/src/modules/: AandB.py  AminusB.py  AuB.py  AxB.py  boolean.py  generateMask.py  getArrayFromMask.py  notA.py
lab1/src/modules/sort/: BubbleSort.py  InsertionSort.py  MergeSort.py  QuickSort.py  SelectionSort.py  ShellSort.py
lab2/src/: main.py
lab2/src/modules/: FloydWarshallAlgorithm.py  get_R1.py  get_R2.py  get_TransponseArray.py  get_addiction.py  get_composition.py  get_couple.py  print_R.py  print_composition.py  print_couple.py  print_type_func.py
lab3/src/cpp/: CMakeLists.txt
lab3/src/cpp/src/: kruskal.cpp  main.hpp
lab3/src/py/: main.py
lab3/src/py/modules/: dijkstra.py  floydWarshell.py  kruskal.py  prim.py
lab4/src/combinatoric/: main.py
lab4/src/combinatoric/modules/: recurrent_variant5.py  recurrent_variant6.py  task1.py
lab4/src/groups/: main.py
lab4/src/groups/modules/: cycle.py  getKeliTable.py  printH.py  printHKeliTable.py  printNetralElement.py  printReverseElement.py
lab4/src/task670-c/: CMakeLists.txt
lab4/src/task670-c/src/: main.c
lab4/src/task670-py/: main.py
